# metaltile

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TOOLCHAIN_PLAN.md  rustfmt.toml
crates/metaltile/: Cargo.toml  README.md
crates/metaltile-bench/: Cargo.toml  OP_FILES.md  kernel_table.py  kernel_table.sh
crates/metaltile-bench/fixtures/: baselines.json
crates/metaltile-bench/src/: baselines.rs  bench_regress.rs  bench_suite.rs  build.rs  dump_msl.rs  gpu_bench.rs  lib.rs  roofline.rs  runner.rs  spec.rs  term.rs
crates/metaltile-bench/src/metal/: arange.metal  arg_reduce.metal  binary.metal  binary_two.metal  conv.metal  copy.metal  fence.metal  fft.metal  fp_quantized.metal  fp_quantized_nax.metal  gemv.metal  gemv_masked.metal  layer_norm.metal  logsumexp.metal  quantized.metal  quantized_nax.metal  random.metal  reduce.metal  rms_norm.metal  rope.metal  scaled_dot_product_attention.metal  scan.metal  softmax.metal  sort.metal  ternary.metal  unary.metal
crates/metaltile-bench/src/ops/: arange.rs  arg_reduce.rs  binary.rs  binary_two.rs  conv.rs  copy.rs  fence.rs  fft.rs  fp_quantized.rs  fp_quantized_nax.rs  gemv.rs  gemv_masked.rs  layer_norm.rs  logsumexp.rs  mod.rs  quantized.rs  quantized_nax.rs  random.rs  reduce.rs  rms_norm.rs  rope.rs  scaled_dot_product_attention.rs  scan.rs  shared.rs  softmax.rs  sort.rs  strided.rs  ternary.rs  unary.rs
crates/metaltile-cli/: Cargo.toml  README.md  build.rs
crates/metaltile-cli/src/: kernel_utils.rs  main.rs  measure.rs  run_spec.rs  runner.rs  stats.rs  term.rs
crates/metaltile-cli/src/cmd/: bench.rs  build.rs  device.rs  diff.rs  inspect.rs  mod.rs  snap.rs  test.rs
crates/metaltile-codegen/: Cargo.toml  README.md
crates/metaltile-codegen/src/: emit.rs  error.rs  lib.rs  msl.rs
crates/metaltile-codegen/src/msl/: emit_block.rs  features.rs  fused.rs  mod.rs  preamble.rs  reduce.rs
crates/metaltile-codegen/src/passes/: algebraic_simplify.rs  const_fold.rs  copy_prop.rs  cse.rs  dead_value_elim.rs  fma_fusion.rs  fusion.rs  if_conversion.rs  licm.rs  mod.rs  remap.rs  schedule.rs  tile_lowering.rs  type_check.rs  unroll.rs  value_sink.rs  vectorize.rs
crates/metaltile-core/: Cargo.toml  README.md
crates/metaltile-core/src/: constexpr.rs  dtype.rs  error.rs  ir.rs  lib.rs  shape.rs  utils.rs
crates/metaltile-interp/: Cargo.toml
crates/metaltile-interp/src/: interpreter.rs  lib.rs  tensor.rs
crates/metaltile-macros/: Cargo.toml  README.md
crates/metaltile-macros/src/: bench_impl.rs  body_parser.rs  lib.rs
crates/metaltile-runtime/: Cargo.toml  README.md
crates/metaltile-runtime/src/: autotune.rs  buffer.rs  capture.rs  context.rs  error.rs  lib.rs
crates/metaltile-std/: Cargo.toml  README.md  build.rs
crates/metaltile-std/src/: bench_types.rs  lib.rs  run_kernel.rs  run_spec.rs  spec.rs
crates/metaltile-std/src/ffai/: arg_reduce.rs  audio_conv1d.rs  aura_dequant_rotated.rs  aura_encode.rs  aura_flash_p1.rs  aura_flash_pass2.rs  aura_flash_sdpa.rs  aura_score.rs  aura_value.rs  batched_4_qgemv.rs  batched_4_qmm.rs  batched_qkv_qgemv.rs  batched_qkv_qmm.rs  conv1d_causal_step_silu_cast_many.rs  conv2d.rs  conv2d_mma.rs  conv3d.rs  conv3d_mma.rs  depthwise_conv2d.rs  dequant_gather.rs  dequant_gemv.rs  dequant_gemv_expert_indexed.rs  dsv4_compressor_pool.rs  dsv4_csa_sdpa_decode.rs  dsv4_fp8_block_dequant.rs  dsv4_indexer_score.rs  dsv4_indexer_topk.rs  dsv4_mhc.rs  dsv4_mhc_sinkhorn_split.rs  dsv4_mxfp4_dequant.rs  dsv4_partial_rope.rs  fishspeech_conv1d.rs  flash_quantized_sdpa.rs  gated_delta.rs  gated_delta_prep.rs  gated_delta_prep_chunk.rs  gated_delta_replay.rs  gated_delta_wy.rs  gated_rms_norm_qgemv.rs  gated_rmsnorm.rs  (+50 more)
crates/metaltile-std/src/mlx/: arange.rs  arg_reduce.rs  binary.rs  binary_two.rs  conv.rs  copy.rs  fence.rs  fft.rs  fp_quantized.rs  fp_quantized_mma.rs  fp_quantized_nax.rs  fused_gate_activation.rs  gather_axis.rs  gemv.rs  gemv_masked.rs  hadamard.rs  hadamard_m.rs  indexing.rs  layer_norm.rs  logsumexp.rs  mod.rs  quantized.rs  quantized_mma_dynamic_m.rs  quantized_mpp.rs  quantized_mpp_int8.rs  quantized_nax.rs  quantized_nax_int8.rs  random.rs  reduce.rs  rms_norm.rs  rope.rs  scaled_dot_product_attention.rs  scan.rs  scatter_axis.rs  sdpa_vector.rs  sgload_smoke.rs  shared.rs  softmax.rs  sort.rs  strided.rs  (+3 more)
crates/metaltile-std/src/ops/: arg_reduce.rs  binary.rs  dequant_gather.rs  dequant_gemv.rs  fft.rs  gather.rs  kv_cache.rs  mod.rs  random.rs  rope.rs  rope_llama.rs  sampling.rs  sdpa_decode.rs  ssm.rs  (+2 more)
crates/metaltile-std/tests/: aura_flash_gpu_correctness.rs  aura_flash_p1_causal_gpu_correctness.rs  aura_flash_sdpa_gpu_correctness.rs  aura_score_gpu_correctness.rs  aura_value_gpu_correctness.rs  batched_4_qgemv_gpu_correctness.rs  batched_4_qmm_gpu_correctness.rs  batched_qkv_qgemv_gpu_correctness.rs  batched_qkv_qmm_gpu_correctness.rs  cast_to_f32_gpu_correctness.rs  conv1d_causal_step_silu_cast_many_gpu_correctness.rs  conv2d_mma_gpu_correctness.rs  conv3d_mma_gpu_correctness.rs  dequant_gemv_gpu_correctness.rs  fft_bluestein_gpu_correctness.rs  flash_quantized_sdpa_gpu_correctness.rs  flash_quantized_sdpa_mask_gpu_correctness.rs  fp_quantized_mma_gpu_correctness.rs  fp_quantized_nax_gpu_correctness.rs  gated_delta_prep_step_correctness.rs  gated_mixer_norm_gpu_correctness.rs  gated_rms_norm_qgemv_int4_gpu_correctness.rs  hadamard_m_gpu_correctness.rs  kernel_registry_consistency.rs  kv_cache_fp8_gpu_correctness.rs  kv_cache_update_many_gpu_correctness.rs  logits_top_p_mask_gpu_correctness.rs  mel_spectrogram_gpu_correctness.rs  moe_gather_qmm_gpu_correctness.rs  moe_gather_qmm_int4_m16_m32_correctness.rs  moe_gather_qmm_microbench.rs  moe_gather_qmm_mma_int8_gpu_correctness.rs  moe_gather_qmm_mpp_bm64_correctness.rs  moe_gather_qmm_mpp_bm64_int8_correctness.rs  moe_gather_qmm_mpp_bm8_correctness.rs  moe_gather_qmm_mpp_bm8_int8_correctness.rs  moe_gather_qmm_mpp_correctness.rs  moe_gather_qmm_mpp_int8_correctness.rs  moe_gpu_correctness.rs  mpp_matmul_smoke.rs  (+35 more)
crates/metaltile/src/: lib.rs  prelude.rs
(+97 files in other folders)
