[workspace]
resolver = "2"
members = [
  "crates/metaltile-core",
  "crates/metaltile-macros",
  "crates/metaltile-codegen",
  "crates/metaltile-runtime",
  "crates/metaltile",
  "crates/metaltile-cli",
  "crates/metaltile-std",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/metaltile/metaltile"
homepage = "https://github.com/metaltile/metaltile"
documentation = "https://docs.rs/metaltile"

[workspace.dependencies]
# Internal
metaltile = { path = "crates/metaltile" }
metaltile-core = { path = "crates/metaltile-core" }
metaltile-macros = { path = "crates/metaltile-macros" }
metaltile-codegen = { path = "crates/metaltile-codegen" }
metaltile-runtime = { path = "crates/metaltile-runtime" }
metaltile-std = { path = "crates/metaltile-std" }

# External
clap = { version = "4.6", features = ["derive"] }
anstyle = "1.0"
anstream = "1.0"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"
thiserror = "2"
smallvec = { version = "1", features = ["serde"] }
rustc-hash = "2"
bytemuck = "1"
half = "2"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitvec = "1"
criterion = { version = "0.8", features = ["html_reports"] }
inventory = "0.3"

# Test-only
trybuild = "1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
