[workspace]
resolver = "2"
members = [
  "crates/metaltile-core",
  "crates/metaltile-macros",
  "crates/metaltile-codegen",
  "crates/metaltile-runtime",
  "crates/metaltile",
  "crates/metaltile-cli",
  "crates/metaltile-std",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/metaltile/metaltile"
homepage = "https://github.com/metaltile/metaltile"
documentation = "https://docs.rs/metaltile"

[workspace.dependencies]
# Internal
metaltile = { path = "crates/metaltile", version = "0.1.0" }
metaltile-core = { path = "crates/metaltile-core", version = "0.1.0" }
metaltile-macros = { path = "crates/metaltile-macros", version = "0.1.0" }
metaltile-codegen = { path = "crates/metaltile-codegen", version = "0.1.0" }
metaltile-runtime = { path = "crates/metaltile-runtime", version = "0.1.0" }
metaltile-std = { path = "crates/metaltile-std", version = "0.1.0" }

# External
clap = { version = "4.6", features = ["derive"] }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
thiserror = "2"
smallvec = { version = "1", features = ["serde"] }
rustc-hash = "2"
bytemuck = "1"
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = { version = "0.8", features = ["html_reports"] }
inventory = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi"] }

# Test-only
trybuild = "1"
insta = { version = "1.43", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

# CI profile: same correctness as release but skips fat-LTO and forces
# max parallelism so cold builds finish in roughly half the time.
# Bench numbers are unaffected — kernels are Metal shaders compiled by
# xcrun, not Rust code, so Rust LTO settings have no bearing on them.
[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 16

[profile.bench]
inherits = "release"
debug = true
